--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: SmitePlayer
-main: org.bukkit.awesomepants.SmitePlayer
+main: org.bukkit.awesomepants.SmitePlayer.SmitePlayer
 author: LordMogra
 website: http://bukkitfun.tumblr.com/ 
 version: 0.1
